--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<mat-toolbar color="accent">
+    <span>
+        Breast Care Diagnosis
+    </span>
+    <button mat-button routerLink="/">Home
+        <mat-icon>dashboard</mat-icon> </button>
+    <button mat-button routerLink="/create">Create
+        <mat-icon>book</mat-icon>
+    </button>
+    <button mat-button>Logout
+        <mat-icon>logout</mat-icon>
+    </button>
+</mat-toolbar>
