--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,38 @@
-<h1>El futuro es hoy</h1>
-<h2>El futuro es hoy</h2>
-<h3>El futuro es hoy</h3>
+<mat-table [dataSource]="dataSource">
+
+    <ng-container matColumnDef="id">
+        <mat-header-cell *matHeaderCellDef> Id </mat-header-cell>
+        <mat-cell *matCellDef="let element" title="{{element.id}}">{{ element.id}} </mat-cell>
+      </ng-container>
+
+    <ng-container matColumnDef="nombre">
+      <mat-header-cell *matHeaderCellDef> Nombre </mat-header-cell>
+      <mat-cell *matCellDef="let element" title="{{element.nombre}}">{{ element.nombre}} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="edad">
+      <mat-header-cell *matHeaderCellDef> Edad </mat-header-cell>
+      <mat-cell *matCellDef="let element" title="{{element.edad}}"> {{element.edad}} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="view">
+      <mat-header-cell *matHeaderCellDef > View </mat-header-cell>
+      <mat-cell *matCellDef="let element">            
+        <a mat-icon-button title="View/edit paciente" routerLink="/paciente/{{element.id}}">
+          <mat-icon color="primary">visibility</mat-icon>
+        </a>
+      </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="delete">
+      <mat-header-cell *matHeaderCellDef> Delete </mat-header-cell>
+      <mat-cell *matCellDef="let element">            
+        <button mat-icon-button title="Delete paciente" (click)="confirmDeletion(element.id)">
+          <mat-icon color="primary">delete</mat-icon>
+        </button>
+      </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+</mat-table>
