--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,12 +2,18 @@
     <span>
         Breast Care Diagnosis
     </span>
-    <button mat-button routerLink="/">Home
+    <button mat-button routerLink="/home">Home
         <mat-icon>dashboard</mat-icon> </button>
-    <button mat-button routerLink="/create">Create
-        <mat-icon>book</mat-icon>
+    <button mat-button *ngIf="login" routerLink="/create">Pacientes
+        <mat-icon>face</mat-icon>
     </button>
-    <button mat-button>Logout
+    <button mat-button *ngIf="login">{{medico.nombre.split(' ')[0]}}
+        <mat-icon>account_circle</mat-icon>
+    </button>
+    <button mat-button *ngIf="!login" routerLink="/">Login
+        <mat-icon>login</mat-icon>
+    </button>
+    <button mat-button *ngIf="login" routerLink="/" (click)="logout()">Logout
         <mat-icon>logout</mat-icon>
     </button>
 </mat-toolbar>
