--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -44,5 +44,8 @@
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"
+    [routerLink]="['/paciente', row.id]"
+    class="clickable-row">
+    </mat-row>
 </mat-table>
