--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<mat-table [dataSource]="dataSource">
+<mat-table [dataSource]="dataSource" *ngIf="login">
 
     <ng-container matColumnDef="id">
         <mat-header-cell *matHeaderCellDef> Id </mat-header-cell>
