--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,4 +1,21 @@
 .clickable-row {
     cursor: pointer;
   }
+
+  .center-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .add-button {
+    background-color: green;
+    color: white;
+    font-size: 16px;
+    width: 150px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   
