--- a/src/app/paciente-detalles/paciente-detalles.component.css
+++ b/src/app/paciente-detalles/paciente-detalles.component.css
@@ -34,3 +34,15 @@
     justify-content: center;
     align-items: center;
   }
+
+  .image-grid .image-item {
+    display: inline-block;
+    margin: 5px;
+  }
+  
+  .thumbnail-image {
+    width: 100px; /* Adjust as needed */
+    height: 100px; /* Adjust as needed */
+    object-fit: cover; /* This will ensure the images cover the area nicely */
+  }
+  
