--- a/src/app/paciente-detalles/paciente-detalles.component.css
+++ b/src/app/paciente-detalles/paciente-detalles.component.css
@@ -41,8 +41,8 @@
   }
   
   .thumbnail-image {
-    width: 100px; /* Adjust as needed */
-    height: 100px; /* Adjust as needed */
-    object-fit: cover; /* This will ensure the images cover the area nicely */
+    width: 100px; 
+    height: 100px; 
+    object-fit: cover; 
   }
   
