Arreglo en la visualizacion de imagenes

--- a/src/app/image-detail/image-detail.component.html
+++ b/src/app/image-detail/image-detail.component.html
@@ -1,6 +1,6 @@
 <div class="image-detail-container">
     <div class="image-container">
-        <img *ngIf="image" [src]="image_path" alt="Selected Image" />
+        <img [src]="image.path" alt="Selected Image" />
     </div>
 
     <div class="info-container">
