--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,15 +2,15 @@
     <span>
         Breast Care Diagnosis
     </span>
-    <button mat-button routerLink="/home">Home
+    <button mat-button routerLink="/home">Pacientes
         <mat-icon>dashboard</mat-icon> </button>
-    <button mat-button *ngIf="login">{{medico.nombre.split(' ')[0]}}
-        <mat-icon>account_circle</mat-icon>
-    </button>
-    <button mat-button *ngIf="!login" routerLink="/">Login
+    <button mat-button *ngIf="!login"  routerLink="/">Login
         <mat-icon>login</mat-icon>
     </button>
     <button mat-button *ngIf="login" routerLink="/" (click)="logout()">Logout
         <mat-icon>logout</mat-icon>
+    </button>
+    <button class="boton-derecho" mat-button *ngIf="login" routerLink="/medico">{{medico.nombre.split(' ')[0]}}
+        <mat-icon>account_circle</mat-icon>
     </button>
 </mat-toolbar>
