--- a/src/app/image-detail/image-detail.component.css
+++ b/src/app/image-detail/image-detail.component.css
@@ -1,15 +1,19 @@
 .image-detail-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .image-container {
   width: 30%; /* Adjusted from 60% to 30% */
+  margin-right: 250px;
+  margin-top: 80px;
 }
 
 .image-container img {
   width: 100%;
   height: auto;
+  align-items: center;
+  justify-content: center;
 }
 
 .info-container {
@@ -29,4 +33,19 @@
 
 button {
   margin-bottom: 20px;
+}
+
+.add-button {
+  background-color: green;
+  color: white;
+  font-size: 16px;
+  width: 150px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.underline {
+  text-decoration: underline;
 }
