--- a/src/app/image-detail/image-detail.component.html
+++ b/src/app/image-detail/image-detail.component.html
@@ -1,22 +1,60 @@
+<!---
 <div class="image-detail-container">
-    <div class="image-container">
-        <img [src]="image.path" alt="Selected Image" />
-    </div>
+    <img class="imagen-container" [src]="image.path" alt="Selected Image">
 
-    <div class="info-container">
-        <button mat-button (click)="predict()">Predict</button>
+    <div *ngIf="!isInforme" class="info-container">
+        <button mat-raised-button title="Añadir informe" routerLink="/paciente/create" class="add-button">
+           <mat-icon>add</mat-icon>
+        </button>
+    </div>
+    <div *ngIf="isInforme" class="info-container">
         <div class="info-item">
             <span class="info-label">Id: </span>
             <span class="info-value">{{ image.fecha.split('T')[0] }}</span>
         </div>
         <div class="info-item">
             <span class="info-label">Prediction: </span>
-            <span class="info-value">{{ predictedData }}</span>
+            <span class="info-value">{{ informe.prediccion }}</span>
         </div>
         <div class="info-item">
             <span class="info-label">Note: </span>
             <textarea [(ngModel)]="userInput" rows="3" cols="30" placeholder="Hola"></textarea>
-            <button mat-button (click)="submitNote()">Submit</button>
+            <button mat-button>Submit</button>
+        </div>
+    </div>    
+</div>
+-->
+
+<div class="image-detail-container">
+    <div class="image-container">
+        <img [src]="image.path" alt="Selected Image" />
+    </div>
+
+    <div class="info-container">
+        <div *ngIf="!isInforme">
+            <h1>Crear informe</h1>
+            <button mat-raised-button title="Añadir informe" routerLink="/informe/create/{{ image.id }}" 
+            class="add-button">
+                <mat-icon>add</mat-icon>
+            </button>
+        </div>
+        <div *ngIf="isInforme">
+            <h1 class="underline">Informe de la imagen</h1>
+            <div class="info-item">
+                <span class = "info-label"> Creado el: </span>
+            <span class="info-value">{{ image.fecha.split('T')[0] }}</span>
+            </div>
+            
+            <div class="info-item">
+                <span class="info-label">El resultado de la predicción ha sido: </span>
+                <br>
+                <span class="info-value">{{ informe.prediccion}}</span>
+            </div>
+            <div class="info-item">
+                <span class="info-label">El médico ha anotado: </span>
+                <br>
+                <span class="info-value">{{ informe.contenido}}</span>
+            </div>
         </div>
     </div>
 </div>
