--- a/src/app/paciente-create/paciente-create.component.html
+++ b/src/app/paciente-create/paciente-create.component.html
@@ -19,11 +19,11 @@
             </mat-form-field>
             <br>
             <mat-form-field class="full-width">
-                <input matInput type="number"  autofocus required placeholder="Edad"  name="edad" [(ngModel)]="paciente.edad">
+                <input matInput type="number"  autofocus placeholder="Edad"  name="edad" [(ngModel)]="paciente.edad">
             </mat-form-field>
             <br>
             <mat-form-field class="full-width">
-                <input matInput type="text"  autofocus required placeholder="Cita"  name="cita" [(ngModel)]="paciente.cita">
+                <input matInput type="text"  autofocus placeholder="Cita"  name="cita" [(ngModel)]="paciente.cita">
             </mat-form-field>
             <br>
             <div class="row-buttons">
