--- a/src/app/paciente-detalles/paciente-detalles.component.html
+++ b/src/app/paciente-detalles/paciente-detalles.component.html
@@ -64,4 +64,9 @@
   </mat-list-item>
 </mat-list>
 
+<mat-paginator [pageSizeOptions]="[2, 5, 10, 20]"
+                 showFirstLastButtons
+                 aria-label="Select page of periodic elements">
+</mat-paginator>
+
 
