--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,20 +2,29 @@
     cursor: pointer;
   }
 
-  .center-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .add-button {
-    background-color: green;
-    color: white;
-    font-size: 16px;
-    width: 150px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.center-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.add-button {
+  background-color: green;
+  color: white;
+  font-size: 16px;
+  width: 150px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+mat-row {
+  transition: background-color 0.3s;
+}
+
+mat-row:hover {
+  background-color: #e0e0e0;
+  cursor: pointer;
+}
   
