--- a/src/app/paciente-detalles/paciente-detalles.component.html
+++ b/src/app/paciente-detalles/paciente-detalles.component.html
@@ -31,42 +31,48 @@
       <mat-icon>file_upload</mat-icon>
     </button>
   </div>
-  <div class="image-grid">
-    <div *ngFor="let image of images" class="image-item">
-      <a [routerLink]="['/image-detail', image.id]">
-        <img [src]="image.path" alt="Imagen del paciente" class="thumbnail-image">
-      </a>
-    </div>
-  </div>
+
 
 </div>
 
-<div *ngIf="!paciente" class="cargando">
-  Cargando detalles del paciente...
-</div>
 
-  
-<mat-list #listaImagenes>
-  <mat-list-item *ngFor="let image of images" (click)="goToImage(image.id)">
-    <div class="list-item-content">
-      <div class="icon-container">
-        <mat-icon matListItemIcon>folder</mat-icon>
-      </div>
-      <div class="text-container">
-        <span>Informe del {{image.fecha.split('T')[0]}}</span>
-      </div>
-      <div class="button-container">
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="mat-table" matSort>
+
+    <!-- Icon Column -->
+    <ng-container matColumnDef="icon">
+      <th mat-header-cell *matHeaderCellDef> Imagen </th>
+      <td mat-cell *matCellDef="let image"> 
+        <!--<img [src]="image.path" alt="Imagen del paciente" class="thumbnail-image"> -->
+        {{image.nombre.split('.')[0]}}
+      </td>
+    </ng-container>
+
+    <!-- Date Column -->
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef> Date </th>
+      <td mat-cell *matCellDef="let image"> 
+        Informe del {{image.fecha.split('T')[0]}}
+      </td>
+    </ng-container>
+
+    <!-- Delete Button Column -->
+    <ng-container matColumnDef="deleteButton">
+      <th mat-header-cell *matHeaderCellDef> Delete </th>
+      <td mat-cell *matCellDef="let image"> 
         <button mat-icon-button title="Borrar paciente" (click)="deleteImage($event)">
           <mat-icon color="warn">delete</mat-icon>
         </button>
-      </div>
-    </div>
-  </mat-list-item>
-</mat-list>
+      </td>
+    </ng-container>
 
-<mat-paginator [pageSizeOptions]="[2, 5, 10, 20]"
-                 showFirstLastButtons
-                 aria-label="Select page of periodic elements">
-</mat-paginator>
+    <!-- Define the columns to display -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row class="clickable-row" *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 
-
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" 
+                 showFirstLastButtons 
+                 aria-label="Select page of images">
+  </mat-paginator>
+</div>
