--- a/src/app/paciente-detalles/paciente-detalles.component.html
+++ b/src/app/paciente-detalles/paciente-detalles.component.html
@@ -68,7 +68,9 @@
 
     <!-- Define the columns to display -->
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row class="clickable-row" *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row class="clickable-row" 
+        *matRowDef="let row; columns: displayedColumns;"
+        [routerLink]="['/image-detail', row.id]"></tr>
   </table>
 
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" 
