--- a/src/app/paciente-detalles/paciente-detalles.component.html
+++ b/src/app/paciente-detalles/paciente-detalles.component.html
@@ -37,9 +37,9 @@
 
 
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" class="mat-table" matSort>
-
-    <!-- Icon Column -->
+  <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-table" matSort>
+  
+    <!-- Image name Column -->
     <ng-container matColumnDef="icon">
       <th mat-header-cell *matHeaderCellDef> Imagen </th>
       <td mat-cell *matCellDef="let image"> 
@@ -60,17 +60,54 @@
     <ng-container matColumnDef="deleteButton">
       <th mat-header-cell *matHeaderCellDef> Delete </th>
       <td mat-cell *matCellDef="let image"> 
-        <button mat-icon-button title="Borrar paciente" (click)="deleteImage($event)">
+        <button mat-icon-button title="Borrar paciente" (click)="deleteImage(image.id)">
           <mat-icon color="warn">delete</mat-icon>
         </button>
       </td>
     </ng-container>
 
+    <ng-container matColumnDef="expand">
+      <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button aria-label="expand row" (click)="(expandedElement = expandedElement === element ? null : element); $event.stopPropagation()">
+          @if (expandedElement === element) {
+            <mat-icon>keyboard_arrow_up</mat-icon>
+          } @else {
+            <mat-icon>keyboard_arrow_down</mat-icon>
+          }
+        </button>
+      </td>
+    </ng-container>
+
+    <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+    <ng-container matColumnDef="expandedDetail">
+      <td mat-cell *matCellDef="let image" [attr.colspan]="columnsToDisplayWithExpand.length">
+        <div class="example-element-detail"
+             [@detailExpand]="image == expandedElement ? 'expanded' : 'collapsed'">
+          <div class="example-element-diagram">
+            <img [src]="image.path" alt="Imagen del paciente" class="thumbnail-image">
+          </div>
+          <div class="example-element-description">
+            Esta imagen se subío en la fecha {{image.fecha.split('T')[0]}} y algo más
+          </div>
+        </div>
+      </td>
+    </ng-container>
+
     <!-- Define the columns to display -->
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <!--<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row class="clickable-row" 
         *matRowDef="let row; columns: displayedColumns;"
-        [routerLink]="['/image-detail', row.id]"></tr>
+        [routerLink]="['/image-detail', row.id]"></tr>-->
+
+    <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
+    <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand;"
+    class="example-element-row"
+    [class.example-expanded-row]="expandedElement === element"
+    (click)="$event.stopPropagation(); expandedElement = expandedElement === element ? null : element">
+    </tr>
+
+  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
   </table>
 
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" 
