--- a/src/app/paciente-detalles/paciente-detalles.component.html
+++ b/src/app/paciente-detalles/paciente-detalles.component.html
@@ -23,7 +23,7 @@
     <button mat-raised-button
             title="Editar paciente"
             routerLink="/paciente/create/{{paciente.id}}">
-      <mat-icon>build</mat-icon>
+      <mat-icon>edit</mat-icon>
     </button>
 
     <input type="file" #imageInput style="display: none;" (change)="uploadImage($event)" accept="image/*"/>
@@ -39,6 +39,15 @@
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-table" matSort>
   
+    <ng-container matColumnDef="see">
+      <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
+      <td mat-cell *matCellDef="let image">
+        <button mat-icon-button (click)="goToImage(image.id)">
+        <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="visibility"></mat-icon>
+      </button>
+      </td>
+    </ng-container>
+
     <!-- Image name Column -->
     <ng-container matColumnDef="icon">
       <th mat-header-cell *matHeaderCellDef> Imagen </th>
@@ -85,7 +94,7 @@
         <div class="example-element-detail"
              [@detailExpand]="image == expandedElement ? 'expanded' : 'collapsed'">
           <div class="example-element-diagram">
-            <img [src]="image.path" alt="Imagen del paciente" class="thumbnail-image">
+            <img [src]="image.path" alt="Imagen del paciente" class="thumbnail-image" [routerLink]="['/image-detail', image.id]">
           </div>
           <div class="example-element-description">
             Esta imagen se subío en la fecha {{image.fecha.split('T')[0]}} y algo más
