--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,3 @@
-.clickable-row {
-    cursor: pointer;
-  }
-
 .center-container {
   display: flex;
   justify-content: center;
@@ -9,7 +5,7 @@
 }
 
 .add-button {
-  background-color: green;
+  background-color: rgb(255, 101, 109);
   color: white;
   font-size: 16px;
   width: 150px;
@@ -19,12 +15,12 @@
   justify-content: center;
 }
 
+mat-row:hover {
+  background-color: #efefef;
+  cursor: pointer;
+}
+  
 mat-row {
   transition: background-color 0.3s;
 }
 
-mat-row:hover {
-  background-color: #e0e0e0;
-  cursor: pointer;
-}
-  
