--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,11 +28,9 @@
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"
-    [routerLink]="['/paciente', row.id]"
-    class="clickable-row"
-    (mouseenter)="onMouseEnter(row)"
-    (mouseleave)="onMouseLeave(row)">
+    [routerLink]="['/paciente', row.id]">
     </mat-row>
+    
 </mat-table>
 
 <p></p>
