--- a/src/app/paciente-detalles/paciente-detalles.component.html
+++ b/src/app/paciente-detalles/paciente-detalles.component.html
@@ -69,7 +69,7 @@
     <ng-container matColumnDef="deleteButton">
       <th mat-header-cell *matHeaderCellDef> Delete </th>
       <td mat-cell *matCellDef="let image"> 
-        <button mat-icon-button title="Borrar paciente" (click)="deleteImage(image.id)">
+        <button mat-icon-button title="Borrar paciente" (click)="confirmDeletion($event, image.id)">
           <mat-icon color="warn">delete</mat-icon>
         </button>
       </td>
@@ -97,7 +97,7 @@
             <img [src]="image.path" alt="Imagen del paciente" class="thumbnail-image" [routerLink]="['/image-detail', image.id]">
           </div>
           <div class="example-element-description">
-            Esta imagen se subío en la fecha {{image.fecha.split('T')[0]}} y algo más
+            Esta imagen se subío en la fecha {{image.fecha.split('T')[0]}} y el nombre del fichero es {{image.nombre}}
           </div>
         </div>
       </td>
