--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,37 +1,34 @@
 <div *ngIf="login">
-<mat-table [dataSource]="dataSource">
-    <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
-      <mat-cell *matCellDef="let element" title="{{element.id}}">{{ element.id}} </mat-cell>
-    </ng-container>
+<table mat-table [dataSource]="dataSource" class="mat-table">
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef> ID </th>
+    <td mat-cell *matCellDef="let element" title="{{element.id}}">{{ element.id }} </td>
+  </ng-container>
 
-    <ng-container matColumnDef="nombre">
-      <mat-header-cell *matHeaderCellDef> Nombre </mat-header-cell>
-      <mat-cell *matCellDef="let element" title="{{element.nombre}}">{{ element.nombre}} </mat-cell>
-    </ng-container>
+  <ng-container matColumnDef="nombre">
+    <th mat-header-cell *matHeaderCellDef> Nombre </th>
+    <td mat-cell *matCellDef="let element" title="{{element.nombre}}">{{ element.nombre }} </td>
+  </ng-container>
 
-    <ng-container matColumnDef="dni">
-      <mat-header-cell *matHeaderCellDef> DNI </mat-header-cell>
-      <mat-cell *matCellDef="let element" title="{{element.dni}}"> {{element.dni}} </mat-cell>
-    </ng-container>
+  <ng-container matColumnDef="dni">
+    <th mat-header-cell *matHeaderCellDef> DNI </th>
+    <td mat-cell *matCellDef="let element" title="{{element.dni}}">{{ element.dni }} </td>
+  </ng-container>
 
-    <ng-container matColumnDef="delete">
-      <mat-header-cell *matHeaderCellDef> Delete </mat-header-cell>
-      <mat-cell *matCellDef="let element">            
-        <button mat-icon-button
-        title="Borrar paciente"
-        (click)="confirmDeletion($event, element.id)">
-          <mat-icon color = "warn">delete</mat-icon>
-        </button>
-      </mat-cell>
-    </ng-container>
+  <ng-container matColumnDef="delete">
+    <th mat-header-cell *matHeaderCellDef> Delete </th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-icon-button title="Borrar paciente" (click)="confirmDeletion($event, element.id)">
+        <mat-icon color="warn">delete</mat-icon>
+      </button>
+    </td>
+  </ng-container>
 
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"
-    [routerLink]="['/paciente', row.id]">
-    </mat-row>
-    
-</mat-table>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row class="clickable-row" *matRowDef="let row; columns: displayedColumns;" [routerLink]="['/paciente', row.id]"></tr>
+
+</table>
+  
 
 <p></p>
 
