--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,23 +1,19 @@
-<!-- login.component.html -->
+<mat-card class="login-card">
+  <mat-toolbar class="login-toolbar">Login</mat-toolbar>
+    <form class="custom-form" method="post">
+    
+    <mat-form-field appearance="fill">
+      <mat-label>Nombre</mat-label>
+      <input matInput [(ngModel)]="nombre" name="nombre" required>
+    </mat-form-field>
+    
 
-<div class="login">
-  <form class="custom-form" method="post">
-    <h1>Login</h1>
-    <input
-      type="text"
-      [(ngModel)]="nombre"
-      name="nombre"
-      placeholder="Nombre"
-      required="required"
-    />
-    <input
-      type="password"
-      [(ngModel)]="dni"
-      name="DNI"
-      placeholder="DNI"
-      required="required"
-    />
-    <button type="submit" (click)="login()">Log in</button>
+    <mat-form-field appearance="fill">
+      <mat-label>DNI</mat-label>
+      <input matInput type="password" [(ngModel)]="dni" name="DNI" required>
+    </mat-form-field>
+    
+    <button mat-raised-button class="login-button" (click)="login()">Log in</button>
+
   </form>
-</div>
-  
+</mat-card>
